# froth

./: .cursorignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  THE-GOOD-THINGS.txt  froth.service  hacking.md  mix.exs  test_asr.ts
assets/css/: app.css
assets/js/: app.js
assets/js/hooks/: voice_audio.js
assets/js/lib/: mic_capture.js  pcm_player.js
c_src/: speex_resample_nif.c
cnode/tdlib_cnode/: CMakeLists.txt
cnode/tdlib_cnode/src/: main.cpp  tgcalls_compat_shim.cpp  tgcalls_register_plugin.cpp
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: froth.ex  froth_web.ex
lib/froth/: agent.ex  analysis.ex  analyzer.ex  anthropic.ex  api_key.ex  application.ex  chat_summary.ex  codex.ex  dataset.ex  jsonb_type.ex  log_formatter.ex  log_translator.ex  podcast.ex  qwen.ex  replicate.ex  repo.ex  rpc.ex  speex_resample.ex  summarizer.ex  task.ex  task_event.ex  task_telegram_link.ex  tasks.ex  telegram.ex  telemetry.ex  voice_clone.ex  wiki.ex  ws_proto.ex
lib/froth/agent/: config.ex  cycle.ex  event.ex  message.ex  tool_result.ex  tool_use.ex  worker.ex
lib/froth/analyzer/: api.ex  discovery.ex  image_worker.ex  pdf_worker.ex  video_worker.ex  voice_worker.ex  xpost_worker.ex  youtube_worker.ex
lib/froth/anthropic/: sse.ex
lib/froth/codex/: event.ex  events.ex  raw_event.ex  raw_events.ex  session.ex  task.ex
lib/froth/dataset/: stored.ex
lib/froth/inference/: effect_executor.ex  inference_session.ex  orchestrator.ex  prompt.ex  recovery.ex  runtime_config.ex  session.ex  session_lookup.ex  session_scheduler.ex  session_server.ex  step_log.ex  tool_steps.ex  tools.ex
lib/froth/podcast/: script.ex  stitch_worker.ex  tts_worker.ex
lib/froth/qwen/: voice_enrollment.ex
lib/froth/replicate/: collection.ex  collection_sync_worker.ex  model.ex  prediction.ex  readme_worker.ex  sync_worker.ex
lib/froth/tasks/: eval.ex  eval_io.ex  eval_sessions.ex  shell.ex
lib/froth/telegram/: auth.ex  bertil.ex  bot.ex  bot_adapter.ex  bot_context.ex  bot_context_html.ex  bot_runtime.ex  bots.ex  call_qwen_bridge.ex  calls.ex  charlie.ex  cnode.ex  cycle_link.ex  effect_executor.ex  group_calls.ex  message.ex  names.ex  queries.ex  session.ex  session_config.ex  sync.ex  tool_loop_prompts.ex  update_router.ex
lib/froth/telegram/profiles/: bertil_prompt.ex  charlie_prompt.ex
lib/froth/telemetry/: broadcaster.ex  logger.ex  span.ex  store.ex
lib/froth/voice/: stream.ex
lib/froth/ws_proto/: client.ex
lib/froth_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/froth_web/channels/: room_channel.ex  user_socket.ex
lib/froth_web/components/: core_components.ex  layouts.ex
lib/froth_web/components/layouts/: mini_root.html.heex  root.html.heex
lib/froth_web/controllers/: error_html.ex  error_json.ex  media_controller.ex  mini_debug_controller.ex  page_controller.ex  page_html.ex  summaries_controller.ex
lib/froth_web/live/: analyses_live.ex  bot_context_live.ex  codex_live.ex  dataset_live.ex  inference_sessions_live.ex  rdf_live.ex  telemetry_live.ex  tool_live.ex  voice_live.ex  wiki_live.ex
lib/mix/tasks/: backfill_charlie_tool_steps.ex  froth.follow.ex  froth.ls.ex  froth.qwen.asr_test.ex  froth.qwen.clone.ex  froth.summarize.ex  froth.telegram.backfill.ex  froth.tgcalls.smoke.ex  froth.top.ex  froth.ws_test.ex  migrate_inference_sessions.ex  record_fixtures.ex
priv/: telegram_summaries.md
priv/bertil/: IDENTITY.md
priv/repo/migrations/: 20260210210723_create_chat_sessions.exs  20260210211913_normalize_messages.exs  20260210234737_add_telegram_sessions.exs  20260211023938_add_telegram_messages.exs  20260211040129_add_analyses.exs  20260211041709_add_oban.exs  20260211115715_add_chat_summaries.exs  20260211123136_add_api_keys.exs  20260211232000_add_replicate_predictions.exs  20260212004604_add_datasets.exs  20260212021123_add_logs_to_replicate_predictions.exs  20260212062811_datasets_allow_multiple_per_name.exs  20260212073804_add_replicate_tables.exs  20260212120000_add_charlie_conversations.exs  20260212163000_add_tool_steps_to_charlie_conversations.exs  20260215000000_rename_charlie_conversations_to_telegram_inference_sessions.exs  20260215001000_add_bot_id_to_telegram_inference_sessions.exs  20260216024000_add_queued_messages_to_telegram_inference_sessions.exs  20260216030000_drop_web_chat_tables.exs  20260216082323_create_tasks_infrastructure.exs  20260216143000_create_codex_session_events.exs  20260216170000_create_codex_session_raw_events.exs  20260216180000_create_wiki_entries.exs  20260217021019_create_podcast_scripts.exs  20260217100000_create_agent_tables.exs  20260218211822_create_streams.exs  20260227184431_create_telegram_cycle_links.exs  20260227193226_add_usage_to_agent_cycles.exs  20260227194116_drop_usage_from_agent_cycles.exs  20260227194158_create_cycle_usage_view.exs  20260228201029_create_telemetry_events.exs  20260228211007_add_span_ids_to_telemetry_events.exs
priv/static/: manifest.webmanifest  sw.js
priv/static/wiki/: style.css
talents/: alex-sigge-podcast-voice  voice-cloning-from-youtube
test/fixtures/sse/simple_reply/: turn_0.sse
test/fixtures/sse/thinking_reply/: turn_0.sse
test/fixtures/sse/tool_use_echo/: turn_0.sse  turn_1.sse
test/froth/: agent_test.exs  anthropic_test.exs  summarizer_test.exs  wiki_test.exs
test/froth/anthropic/: sse_test.exs
test/froth/codex/: raw_events_test.exs
test/froth/inference/: prompt_test.exs  tools_test.exs
test/froth/tasks/: eval_sessions_test.exs
test/froth/telegram/: bot_context_html_test.exs  bot_context_test.exs  calls_test.exs  group_calls_test.exs
test/froth_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/froth_web/live/: codex_live_test.exs  wiki_live_test.exs
test/support/: anthropic_case.ex  conn_case.ex  sse_replay.ex
